[package]
name = "mdbook-tabbed-view"
version = "0.0.1"
authors = ["VinciYan <sywq6356010@163.com>"]
description = "An mdbook plugin for Tabbed View."
edition = "2018"
rust-version = "1.66"

[dependencies]
mdbook = { version = "0.4.40", default-features = false }
pulldown-cmark = { version = "0.9.3", default-features = false }
log = "0.4.19"
clap = { version = "4.3.19", features = ["cargo", "derive"] }
serde_json = "1.0.104"
toml = "0.5.11"
regex = "1.10.6"
uuid = { version = "1.3.0", features = ["v4"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
env_logger = "0.10.0"
